[gd_scene load_steps=9 format=2]

[ext_resource path="res://moving character/PLayer/Player.gd" type="Script" id=1]
[ext_resource path="res://moving character/PLayer/Camera2D.gd" type="Script" id=2]
[ext_resource path="res://moving character/Drawing/Drawing.tscn" type="PackedScene" id=3]
[ext_resource path="res://moving character/textures/Character.png" type="Texture" id=4]
[ext_resource path="res://moving character/PLayer/run.wav" type="AudioStream" id=5]
[ext_resource path="res://moving character/textures/brush.png" type="Texture" id=6]
[ext_resource path="res://moving character/PLayer/Sprite.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 2 )

[node name="PlayerSprite" parent="." instance=ExtResource( 3 )]
texture = ExtResource( 4 )
drawing_identifier = "Player"

[node name="Armor" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 18 )
scale = Vector2( 0.7, 0.7 )
texture = null
drawing_identifier = "Armor"

[node name="Shoes" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 32 )
scale = Vector2( 0.5, 0.5 )
texture = null
drawing_identifier = "Shoes"

[node name="Run" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Brush" type="Sprite" parent="."]
position = Vector2( -86, -10 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
script = ExtResource( 7 )
[connection signal="cam_pos_changed" from="Camera2D" to="." method="_on_Camera2D_cam_pos_changed"]
